--- a/src/components/sections/Gallery.astro
+++ b/src/components/sections/Gallery.astro
@@ -30,27 +30,12 @@ const commercialImages = content?.commercial || [];
       <div class="flex justify-start mt-8">
         <ul class="inline-flex gap-8 items-start">
           <li class="relative button-wrapper">
-            <button class="toggle-btn active relative z-50 px-6 py-3 font-medium hover-brush text-2xl" data-category="residential">
+            <button class="border-b-4 relative z-50 px-6 py-3 font-medium hover-brush text-2xl" data-category="residential">
                 Residential
             </button>
-            <div class="absolute inset-0 z-0 svg-container">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 184.2 89.71" preserveAspectRatio="none" class="w-full h-full">
-                    <g>
-                        <polyline class="paint-button animate" points="21.3 77 52.33 10.42 73.06 75.54 108.28 11.3 130.87 79.88 162.86 10.42"></polyline>
-                    </g>
-                </svg>
-            </div>
-            
           </li>
           <li class="relative button-wrapper">
-            <div class="absolute inset-0 z-0 svg-container">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 184.2 89.71" preserveAspectRatio="none" class="w-full h-full">
-                    <g>
-                        <polyline class="paint-button" points="21.3 77 52.33 10.42 73.06 75.54 108.28 11.3 130.87 79.88 162.86 10.42"></polyline>
-                    </g>
-                </svg>
-            </div>
-            <button class="toggle-btn relative z-10 px-6 py-3 font-medium hover-brush text-2xl" data-category="commercial">
+            <button class="border-b-4 relative z-10 px-6 py-3 font-medium hover-brush text-2xl" data-category="commercial">
                 Commercial
             </button>
           </li>
