--- a/src/components/sections/Reviews.astro
+++ b/src/components/sections/Reviews.astro
@@ -44,24 +44,8 @@ const googleReviewsLink = content?.googleReviewsLink || "https://www.google.com/
                     <div class="testimonial-wrapper relative">
 
                       <!-- Tarjeta principal -->
-                      <div class="testimonial-card relative  text-black p-8 sm:p-10 lg:p-12 rounded-lg shadow-2xl max-w-xl overflow-hidden">
-                        <!-- SVG animado de fondo -->
-                        <div class="testimonial-bg absolute inset-0 pointer-events-none">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 489.02 350.02"
-                            preserveAspectRatio="none"
-                            class="w-full h-full"
-                            aria-hidden="true"
-                          >
-                            <g>
-                              <polyline
-                                class="testimonial-paint-path"
-                                points="72.88 48.14 87.87 314.09 159.78 23.37 168.06 307.68 254.91 27.18 259.67 326.65 362.14 23.37 360.33 331.11 407.52 48.83 416.07 302.49"
-                              />
-                            </g>
-                          </svg>
-                        </div>
+                      <div class="testimonial-card relative text-white p-8 sm:p-10 lg:p-12 rounded-lg shadow-2xl max-w-xl overflow-hidden">
+                        
 
                         <!-- Comillas SVG -->
                         <div class="quotes relative mb-6 w-12 h-8">
