--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const seoData = {
     <Hero />
     <Services />
     <About />
-    <WhatWeDo />
+    <!-- <WhatWeDo /> -->
     <Team />
     <Gallery />
     <Reviews />
