Creando nueva seccion carousell

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,13 @@
  */
 
 import About from "@/components/sections/About.astro";
+import Clients from "@/components/sections/Clients.astro";
 import Contact from "@/components/sections/Contact.astro";
 import Gallery from "@/components/sections/Gallery.astro";
 import Hero from "@/components/sections/Hero.astro";
 import Reviews from "@/components/sections/Reviews.astro";
 import Services from "@/components/sections/Services.astro";
 import Team from "@/components/sections/Team.astro";
-import WhatWeDo from "@/components/sections/WhatWeDo.astro";
 import { COMPANY_INFO } from "@/constants/site";
 import Layout from "@/layouts/Layout.astro";
 
@@ -27,6 +27,7 @@ const seoData = {
     <Hero />
     <Services />
     <About />
+    <Clients />
     <!-- <WhatWeDo /> -->
     <Team />
     <Gallery />
